src/main/k8s/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: pazuzu-registry
  annotations:
    prometheus.io/probe: 'true'
    prometheus.io/probe-path: '/_manage/health'
spec:
  type: $SERVICE_TYPE
  selector:
    app: pazuzu-registry
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
